--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openssl1.0 (1.0.2p-1) unstable; urgency=medium
+
+  * New upstream version 1.0.2p
+  * Rebase patches on top of 1.0.2p release
+
+ -- Laurent Declercq <l.declercq@nuxwin.com>  Mon, 29 Oct 2018 03:27:39 +0100
+
 openssl1.0 (1.0.2o-2) unstable; urgency=medium
 
   * Updated d/watch download location
